samples/_failures_safe/1761341925_cf2c5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_485f4f95.c: In function ‘main’:
./samples/SAFE/__tmp_485f4f95.c:138:24: error: missing terminating " character
  138 |                 printf("Please specify a level (INFO, WARNING, ERROR
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_485f4f95.c:138:17: error: expected expression at end of input
  138 |                 printf("Please specify a level (INFO, WARNING, ERROR
      |                 ^~~~~~
./samples/SAFE/__tmp_485f4f95.c:138:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_485f4f95.c:138:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_485f4f95.c:138:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_485f4f95.c:138:17: error: expected declaration or statement at end of input
